[workspace]
members = [ 
  "contracts/*", 
  "crates/*", 
  "tests/*", 
  "xtask"
]

resolver = "2"

[workspace.dependencies]
thiserror = "1.0.38"
serde = "1.0.157"
anyhow = "1.0.70"
xshell = "0.2.3"
prost = "0.12.1"

cosmwasm-schema = "1.2.2"
cosmwasm-std = "1.2.2"
serde-json-wasm = "1.0.0"

cw-storage-macros = { git = "https://github.com/v26-solutions/cw-storage-macros", rev = "ab16ce2" }
cosmwasm-xtask = { git = "https://github.com/v26-solutions/cosmwasm-xtask" }
neutron-sdk = { git = "https://github.com/neutron-org/neutron-sdk" }

common = { path = "crates/common" }
multiple-ica-icq = { path = "contracts/multiple-ica-icq" }
ibc-transfer-roundtrip = { path = "contracts/ibc-transfer-roundtrip" }