[package]
name = "xtask"
version = "0.0.0"
edition = "2021"

[lib]
path = "xtask.rs"
test = false
doctest = false

[[bin]]
name = "xtask"
path = "cli.rs"
test = false
doctest = false

[dependencies]
serde.workspace = true
cosmwasm-xtask.workspace = true
anyhow.workspace = true
xshell.workspace = true

clap = { version = "4.1.11", features = [ "derive" ] } 
env_logger = "0.10.0"
