[package]
name = "multiple-ica-icq"
version = "0.1.0"
edition = "2021"

[lib]
path = "contract.rs"
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[dependencies]
thiserror.workspace = true
prost.workspace = true

cosmwasm-std = { workspace = true, features = [ "stargate" ] }
cosmwasm-schema.workspace = true
cw-storage-macros.workspace = true
neutron-sdk.workspace = true

common.workspace = true
