[package]
name = "common"
version = "0.0.0"
edition = "2021"

[lib]
path = "common.rs"
test = false
doctest = false

[dependencies]
serde = { workspace = true, features = [ "derive" ] }
thiserror.workspace = true
prost.workspace = true

cosmwasm-std = { workspace = true, features = [ "stargate" ] }
cosmwasm-schema.workspace = true
neutron-sdk.workspace = true

paste = "1.0.14"
